--- a/downloads.html
+++ b/downloads.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Downloads - I make apps at 3am</title>
+    <title>MinecraftSmpAutoseller (my only project right now) - I make apps at 3am</title>
 
     <style>
         body {
