--- a/downloads.html
+++ b/downloads.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MinecraftSmpAutoseller (my only project right now) - I make apps at 3am</title>
+    <title>Projects - I make apps at 3am</title>
 
     <style>
         body {
@@ -79,7 +79,7 @@
     <div class="container">
 
         <div class="card">
-            <h2>GitHub Repository</h2>
+            <h2>GitHub Repository For the Autoseller</h2>
             <a class="btn" href="https://github.com/I-Make-Apps-At-3am-Instead-Of-Sleeping/MinecraftSmpAutoseller" target="_blank">
                 Go to GitHub
             </a>
