--- a/downloads.html
+++ b/downloads.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Projects - I make apps at 3am</title>
+    <title>My Only Projects - I make apps at 3am</title>
 
     <style>
         body {
@@ -86,21 +86,21 @@
         </div>
 
         <div class="card">
-            <h2>Java Edition Autoseller (Windows)</h2>
+            <h2>Minecraft Java Edition Autoseller (Windows)</h2>
             <a class="btn" href="https://www.mediafire.com/file/ddbtpj83n3xfcta/Java+Edition+Autoseller.zip/file" target="_blank">
                 Download
             </a>
         </div>
 
         <div class="card">
-            <h2>Java Edition Autoseller (Linux)</h2>
+            <h2>Minecraft Java Edition Autoseller (Linux)</h2>
             <a class="btn" href="https://www.mediafire.com/file/zbdeaq3axpe7qdm/Java+Edition+Autoseller+Linux.zip/file" target="_blank">
                 Download
             </a>
         </div>
 
         <div class="card">
-            <h2>Bugrock Edition Autoseller (Windows)</h2>
+            <h2>Minecraft Bugrock Edition Autoseller (Windows)</h2>
             <a class="btn" href="https://www.mediafire.com/file/2r4qxhqchx4way8/Bugrock+Edition+Autoseller.zip/file" target="_blank">
                 Download
             </a>
