--- a/downloads.html
+++ b/downloads.html
@@ -82,7 +82,7 @@
           <div class="card">
             <h2>Main Page</h2>
             <a class="btn" href="index.html" target="_blank">
-                Go Back
+                Open New Tab with Page
             </a>
         </div>
         
