--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
             transform: translateY(-4px);
             box-shadow: 0 0 25px rgba(255, 100, 50, 0.8);
         }
+        .btn-danger {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 14px 28px;
+    background: linear-gradient(135deg, #ff1a1a, #b80000);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 18px;
+    transition: 0.2s ease;
+}
+
+.btn-danger:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 0 18px rgba(255, 50, 50, 0.7);
+}
 
         footer {
             margin-top: 70px;
@@ -66,6 +82,12 @@
         <a class="btn" href="downloads.html">View My Projects</a>
     </div>
 
+    <div class="card">
+    <h2>Don't press this...</h2>
+    <a class="btn-danger" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+        Seriously, don't.
+    </a>
+</div>
     <footer>
         © 2026 I-Make-Apps-At-3am-Instead-Of-Sleeping
     </footer>
