--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
     transform: translateY(-3px);
     box-shadow: 0 0 18px rgba(255, 50, 50, 0.7);
 }
+.btn-GETOUT {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 14px 28px;
+    background: linear-gradient(135deg, #b80000, #630c0c);
+    color: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+    font-size: 18px;
+    transition: 0.2s ease;
+}
+
+.btn-GETOUT:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 0 18px rgba(255, 50, 50, 0.7);
+}
+
 
         footer {
             margin-top: 70px;
@@ -71,6 +88,13 @@
             font-size: 14px;
             padding-bottom: 40px;
         }
+		html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* kills scroll */
+}
     </style>
 </head>
 
@@ -102,6 +126,15 @@
 		
 		© 2026 I-Make-Apps-At-3am-Instead-Of-Sleeping
     </footer>
+	<footer>
+	So... You found this. Please. Don't zoom out more.
+	<footer>
 
+<div class="card">
+    <h2>DO NOT CLICK THIS</h2>
+    <a class="btn-GETOUT" href="scrappedpage.html" target="_blank">
+        PLEASE. IT WILL GET LOOSE.
+    </a>
+</div>
 </body>
 </html>
