--- a/downloads.html
+++ b/downloads.html
@@ -132,6 +132,22 @@
             </a>
         </div>
 		
+		 <div class="card">
+            <h2>SANS SOUND BUTTON APP</h2>
+            <a class="btn" href="https://www.mediafire.com/file/vz4omqmatyo0evt/Sans_Sound_Button_No_Virus.zip/file" target="_blank">
+                Download (NO VIRUS) (WINDOWS)
+            </a>
+        </div>
+		
+		
+		 <div class="card">
+            <h2>SANS SOUND BUTTON APP <div class=> </h2>
+            <a class="btn" href="https://www.mediafire.com/file/f31hby1vgq8ryfm/Sans_Sound_Button_No_Cryptominers.zip/file" target="_blank">
+                Download (NO CRYPTOMINERS) (UBUNTU LINUX)
+            </a>
+        </div>
+		
+		
 		<iframe width="110" height="200" src="https://www.myinstants.com/instant/sans-voice/embed/" frameborder="0" scrolling="no"></iframe>
     </div>
 
