--- a/iwonderwhatthisdoes.html
+++ b/iwonderwhatthisdoes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Projects - I make apps at 3am</title>
+    <title>...</title>
 
     <style>
         body {
@@ -93,7 +93,7 @@
 </head>
 <body>
 
-    <h1>Downloads</h1>
+    <h1>Hmm...</h1>
 
     <div class="container">
 
