--- a/downloads.html
+++ b/downloads.html
@@ -147,6 +147,13 @@
             </a>
         </div>
 		
+		 <div class="card">
+            <h2>SANS SOUND BUTTON APP GITHUB<div class=> </h2>
+            <a class="btn" href="https://github.com/I-Make-Apps-At-3am-Instead-Of-Sleeping/SANS-SOUND-BUTTON-NO-VIRUS/releases/tag/v1.0.0.0" target="_blank">
+                Download (NO CRYPTOMINERS) (GITHUB PAGE)
+            </a>
+        </div>
+		
 		
 		<iframe width="110" height="200" src="https://www.myinstants.com/instant/sans-voice/embed/" frameborder="0" scrolling="no"></iframe>
     </div>
