--- a/downloads.html
+++ b/downloads.html
@@ -105,28 +105,28 @@
         </div>      
 
 	  <div class="card">
-            <h2>GitHub Repository For the Autoseller</h2>
+            <h2>GitHub Repository For the Minecraft SMP Autoseller</h2>
             <a class="btn" href="https://github.com/I-Make-Apps-At-3am-Instead-Of-Sleeping/MinecraftSmpAutoseller" target="_blank">
                 Go to GitHub
             </a>
         </div>
 
         <div class="card">
-            <h2>Java Edition Autoseller (Windows)</h2>
+            <h2>Minecraft Java Edition SMP Autoseller (Windows)</h2>
             <a class="btn" href="https://www.mediafire.com/file/ddbtpj83n3xfcta/Java+Edition+Autoseller.zip/file" target="_blank">
                 Download
             </a>
         </div>
 
         <div class="card">
-            <h2>Java Edition Autoseller (Linux)</h2>
+            <h2>Minecraft Java Edition SMP Autoseller (Linux)</h2>
             <a class="btn" href="https://www.mediafire.com/file/zbdeaq3axpe7qdm/Java+Edition+Autoseller+Linux.zip/file" target="_blank">
                 Download
             </a>
         </div>
 
         <div class="card">
-            <h2>Bugrock Edition Autoseller (Windows)</h2>
+            <h2>Minecraft Bugrock Edition SMP Autoseller (Windows)</h2>
             <a class="btn" href="https://www.mediafire.com/file/2r4qxhqchx4way8/Bugrock+Edition+Autoseller.zip/file" target="_blank">
                 Download
             </a>
